--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "api": "1.0.0",
   "main": "dist/code.js",
   "ui": "dist/ui.html",
-  "editorType": ["figma", "figjam"],
+  "editorType": ["figma"],
   "networkAccess": {
     "allowedDomains": ["sheets.googleapis.com"]
   }
